--- a/style.css
+++ b/style.css
@@ -195,10 +195,10 @@ button:active {
     width: 100%;
     height: 100px;
     font-size: 1.5rem;
-    background: linear-gradient(135deg, #d32f2f, #b71c1c);
+    background: linear-gradient(135deg, #37ce37, #245f16);
     color: white;
     border-radius: 50px;
-    box-shadow: 0 6px 0 #7f0000;
+    box-shadow: 0 6px 0 #058d10;
     margin: 15px 0;
 }
 
